# cs515-hw4

./: .gitignore  pyproject.toml  requirements.txt
src/communication_model/: model.py  train.py
src/financial_forecasting/: __init__.py
src/financial_forecasting/analysis/: aggregate_exact.py  aggregate_rolling.py  analyze_exact_lstm.py  analyze_turning_point.py  compare_exact_vs_rolling.py
src/financial_forecasting/baselines/: regression_baselines.py
src/financial_forecasting/config/: __init__.py  base.py
src/financial_forecasting/data/: __init__.py  auxiliary_features.py  metadata_builder.py  raw_schema.py  rolling_windows.py  scaling.py  splits.py  torch_dataset.py  turning_dataset.py  turning_point_windows.py  windows.py  yfinance_client.py
src/financial_forecasting/dataset/: build_auxiliary_features.py  build_exact_return_windows.py  build_original_ohlc_named.py  build_rolling_return_windows.py  build_turning_point_windows.py  dataset_analysis.py  download_yfinance.py  validate_raw_data.py  windowing_analysis.py
src/financial_forecasting/evaluation/: __init__.py  classification_metrics.py  prediction_records.py  regression_metrics.py
src/financial_forecasting/models/: __init__.py  stock_bigru_classifier.py  stock_bilstm_classifier.py  stock_gru.py  stock_lstm.py
src/financial_forecasting/parameters/: __init__.py  auxiliary_feature_params.py  data_params.py  exact_gru_params.py  exact_lstm_params.py  feature_params.py  rolling_gru_params.py  rolling_lstm_params.py  turning_point_params.py
src/financial_forecasting/plotting/: __init__.py  style.py  (+2 more)
(+18 files in other folders)
